--- a/hypothesis/presentation.ipynb
+++ b/hypothesis/presentation.ipynb
@@ -368,7 +368,7 @@
     }
    },
    "source": [
-    "<img src=\"https://66.media.tumblr.com/tumblr_lztw2xSrIy1qf5rll.gif\" style=\"width:80%;margin-left:auto;margin-right:auto;\">"
+    "<img src=\"images/psych.jpg\" style=\"width:80%;margin-left:auto;margin-right:auto;\">"
    ]
   },
   {
