Armo outline y agrego imagenes

--- a/conferences/pyconar2019/widgets-presentation.ipynb
+++ b/conferences/pyconar2019/widgets-presentation.ipynb
@@ -2,6 +2,68 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Outline\n",
+    "=======\n",
+    "\n",
+    "\n",
+    "\n",
+    "Intro\n",
+    "-----\n",
+    "\n",
+    "- Que es un widget\n",
+    "- Historia de la ferreteria\n",
+    "- Por que son importantes los widgets\n",
+    "    - gifs widgets\n",
+    "\n",
+    "- Representacion https://www.youtube.com/watch?v=4q_-iWqJSfk\n",
+    "    - Rock Paper Scissor Lizard Spock\n",
+    "\n",
+    "El enfoque de la charla es dar una explicacion a varios conceptos utilizados por los widgets\n",
+    "que no son tan usuales en la programacion con python.\n",
+    "\n",
+    "Como funciona\n",
+    "-------------\n",
+    "\n",
+    "\n",
+    "- Atributos\n",
+    "    - Traitlets\n",
+    "    \n",
+    "- Eventos\n",
+    "    https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Events.html#Traitlet-events\n",
+    "    https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Events.html#Registering-callbacks-to-trait-changes-in-the-kernel \n",
+    "    - Callbacks \n",
+    "    \n",
+    "- Vincular atributos\n",
+    "    \n",
+    "    - Comunicacion entre \n",
+    "    \n",
+    "- Descomposicion en Modelo y Vista\n",
+    "\n",
+    "- Caveats\n",
+    "   \n",
+    "   - Estilo https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Styling.html\n",
+    "   - serializacion https://github.com/jupyter-widgets/traittypes https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Low%20Level.html#Serialization-of-widget-attributes\n",
+    "    - debugging https://ipywidgets.readthedocs.io/en/latest/examples/Output%20Widget.html#Debugging-errors-in-callbacks-with-the-output-widget  \n",
+    "    \n",
+    "- Mi cosito\n",
+    "   \n",
+    "   - https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Custom.html\n",
+    "   - https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Low%20Level.html\n",
+    "    \n",
+    "- Muchos widgets\n",
+    "\n",
+    "    https://github.com/jupyter-widgets/ipywidgets/issues/2296\n",
+    "    https://nosonhorasweb.com.ar/wp-content/uploads/2019/06/Open-Folk-Nsh-69.jpg\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "El objetivo de la charla es entender la estructura de los widgets y cómo funcionan dentro de los notebooks para poder implementar widgets propios. Vamos a ver en superficialmente como es la arquitectura de los widgets y cómo se maneja el comportamiento de los mismos. También veremos cuales son los protocolos que exponen los widgets, cómo utilizarlos y un par de consideraciones a tener en cuenta. Haremos un recorrido rápido por los widgets predefinidos y para finalizar recorreremos el desarrollo de un widget desde cero."
@@ -9,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -45,19 +107,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Que podemos hacer con un widget"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -69,8 +118,253 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Historia de la ferreteria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://upload.wikimedia.org/wikipedia/commons/8/8f/Benito_Cerati_y_Charly_García.jpg "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://pbs.twimg.com/media/EJmvpSFWsAA_6qz.jpg:large"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://posta.fm/tecla-cualquiera-90e4fb3ebd8a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=QVJow3nwqSA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=uhq0ZHpunB4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=IZ7qVoO-l-E"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://twitter.com/furorpodcast\n",
+    "\n",
+    "https://github.com/maartenbreddels/ipywebrtc\n",
+    "\n",
+    "https://github.com/jupyter-widgets/pythreejs\n",
+    "\n",
+    "https://github.com/jupyter-widgets/ipyleaflet\n",
+    "\n",
+    "https://github.com/maartenbreddels/ipyvolume\n",
+    "\n",
+    "https://github.com/martinRenou/ipycanvas\n",
+    "\n",
+    "https://github.com/JuanCab/AstroInteractives\n",
+    "\n",
+    "https://github.com/jupyter-widgets/tutorial"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -94,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -129,28 +423,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "caa835f0777e44bea208a65bd0b0b61e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Button(style=ButtonStyle()), Text(value=''), HTML(value='<i class=\"fa fa-hand-pe…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "w"
    ]
@@ -180,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -256,29 +535,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Phosphore JS"
+    "# Phosphore JS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<i class=\"fa fa-thumbs-o-up\" style=\"font-size:45px;color:blue\"></i>'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "icono.value"
    ]
