Presentacion completa sin codigo ejecutado

--- a/conferences/pyconar2019/widgets-presentation.ipynb
+++ b/conferences/pyconar2019/widgets-presentation.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![99pi](imagenes/99pi.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![pyconar](imagenes/pyconar_isologo.png)"
    ]
@@ -29,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -51,23 +59,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# !ls imagenes\n",
-    "\n",
-    "como_ser_influencer_todo_es_fake.jpg\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![ferreteria](imagenes/tenes_el_cosito_cronicas_ferreteras.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "# Y por qué deberían interesarme los widgets?"
    ]
@@ -76,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -87,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -98,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -109,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -120,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -129,43 +136,78 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![binary_star](imagenes/binary_star_demo.gif)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![tecla](imagenes/tecla_cualquiera.jpeg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Advertencia!!!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![benito_y_charly](imagenes/benito_cerati_y_charly_garcia.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# ¿Cómo funciona un **ipywidget**?"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Empecemos con un objeto basico y vemos la representacion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "class Cosito:\n",
@@ -179,7 +221,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![print_y_repr](imagenes/print_y_repr_como_debuguear_python.png)"
    ]
@@ -187,7 +233,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "class Cosito:\n",
@@ -208,14 +258,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![lil_mikela](imagenes/lil_mikela_todo_es_fake.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "https://ipython.readthedocs.io/en/stable/config/integrating.html#rich-display"
    ]
@@ -223,7 +281,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "class Cosito:\n",
@@ -251,7 +313,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "from ipywidgets import HTML, VBox, Image, IntSlider, link\n",
@@ -261,7 +327,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "class Cosito:\n",
@@ -284,9 +354,19 @@
     "        slider = IntSlider(min=100,max=300)\n",
     "        imagen = Image(value=imagen_data,height=200,width=300)\n",
     "        link((imagen,'width'),(slider,'value'))\n",
-    "        display(VBox([html,imagen,slider]))\n",
-    "\n",
-    "    \n",
+    "        display(VBox([html,imagen,slider]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "ruflete = Cosito('ruflete')    \n",
     "print('Esto es str:', ruflete)\n",
     "print('Esto es repr:',repr(ruflete))\n",
@@ -295,26 +375,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![angustia](imagenes/la_angustia_peripateticas.jpeg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Cosito()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from traitlets import Unicode, Int\n",
     "from ipywidgets import Widget\n",
@@ -330,21 +408,44 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Mencionar los traitlets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![lo_keh](imagenes/miau_trio_13_lo_keh.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![descriptors](imagenes/descriptors_exposed.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![lo_keh](imagenes/miau_trio_02_me_decis_que_espere_tu_llamado.png)"
    ]
@@ -352,7 +453,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "def llamado(cambio):\n",
@@ -364,16 +469,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![lo_keh](imagenes/miau_trio_04_este_es_mi_mensaje.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "# [Protocolo del evento](https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Events.html#Registering-callbacks-to-trait-changes-in-the-kernel)\n",
+    "# [Estructura del evento](https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Events.html#Registering-callbacks-to-trait-changes-in-the-kernel)\n",
     "\n",
     "```python\n",
     "def llamado(cambio):\n",
@@ -390,7 +503,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![siempre_me_decis_lo_que_tengo_que_hacer](imagenes/miau_trio_01_siempre_decis_que_tengo_que_hacer.png)"
    ]
@@ -398,7 +515,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "rosca = Cosito(nombre='rosca')\n",
@@ -411,33 +532,46 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Hay veces que los efectos de los callbacks quedan ocultos "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![espero](imagenes/miau_trio_03_espero_espero.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## [Output widget para capturar la salida de un llamado](https://ipywidgets.readthedocs.io/en/latest/examples/Output%20Widget.html#Debugging-errors-in-callbacks-with-the-output-widget)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Cosito(tamanio=0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "def intentar_encastrar(cambio):\n",
     "    raise ValueError('No deberías hacer eso')\n",
@@ -449,24 +583,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f61653b84f614ee1a8ffc41412914cb8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(border='1px solid black'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from ipywidgets import Output\n",
     "output = Output(layout={'border': '1px solid black'})\n",
@@ -481,14 +604,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![hasta_ahora_todo_bien](imagenes/hasta_ahora_todo_bien_tarde_baby.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![siempre_me_preguntas_como](imagenes/miau_trio_05_siempre_me_preguntas_como.png)"
    ]
@@ -496,7 +627,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "from traitlets import Unicode, Bool, validate, TraitError\n",
@@ -512,7 +647,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "```javascript\n",
     "var CositoModel = widgets.DOMWidgetModel.extend({\n",
@@ -531,9 +670,83 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![melancolia](imagenes/la_melancolia_peripatetica.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![](imagenes/backbone.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "# https://github.com/jupyter-widgets/widget-ts-cookiecutter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![bueno_ahora_escucha_mi_llamado](imagenes/miau_trio_04_bueno_ahora_escucha_mi_llamado.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```javascript\n",
+    "        this.model.on('change:value',this.value_changed,this);\n",
+    "```        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![deja_de_chatearme](imagenes/miau_trio_07_deja_de_chatearme.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```javascript\n",
+    "        this.listenTo(this.model,'change:value',this.value_changed);\n",
+    "```"
    ]
   },
   {
@@ -544,86 +757,60 @@
     }
    },
    "source": [
-    "![](imagenes/backbone.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# https://github.com/jupyter-widgets/widget-ts-cookiecutter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![bueno_ahora_escucha_mi_llamado](imagenes/miau_trio_04_bueno_ahora_escucha_mi_llamado.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```javascript\n",
-    "        this.model.on('change:value',this.value_changed,this);\n",
-    "```        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![deja_de_chatearme](imagenes/miau_trio_07_deja_de_chatearme.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```javascript\n",
-    "        this.listenTo(this.model,'change:value',this.value_changed);\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "![felicidad](imagenes/la_felicidad_peripateticas.jpeg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![chino](imagenes/miau_trio_12_chino.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## [Serialización entre python y javascript](https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Low%20Level.html#Serialization-of-widget-attributes)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![chino](imagenes/entendiendo_unicode.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![emoji](imagenes/miau_trio_11_emoji.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## [Traittypes](https://github.com/jupyter-widgets/traittypes)\n",
     "\n",
@@ -631,13 +818,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Cuando empezamos a tener varios widgets que interactuan"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "from ipywidgets import FloatSlider, Dropdown\n",
+    "\n",
     "cosito = Cosito()\n",
+    "precio   = FloatSlider(min=0,max=200)\n",
+    "etiqueta = Dropdown(options=['Nuevo','Usado','Reparado'])\n",
     "\n",
     "def cambiar_precio(cambio):\n",
     "    cosito.precio = cambio['new']\n",
@@ -646,9 +851,6 @@
     "    if cambio['new'] == 'Usado':\n",
     "        cosito.precio *=  0.45\n",
     "        cosito.etiqueta = cambio['new']\n",
-    "        \n",
-    "precio   = FloatSlider(min=0,max=200)\n",
-    "etiqueta = Dropdown(options=['Nuevo','Usado','Reparado'])\n",
     "\n",
     "precio.observe(cambiar_precio)\n",
     "etiqueta.observe(actualizacion_de_estado,names='value')"
@@ -656,29 +858,45 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![las_estaciones](imagenes/oh_mi_novia_las_estaciones.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![open_folk](imagenes/Open-Folk-Nsh.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "# Ipywidgets [Issue 2296](https://github.com/jupyter-widgets/ipywidgets/issues/2296)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "from traitlets import HasTraits, Float, observe, Unicode\n",
@@ -704,7 +922,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
@@ -734,21 +956,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![redes](imagenes/voten_los_politicos_todo_es_fake.jpg)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "# @sashaKile"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "# Links\n",
     "\n",
@@ -782,13 +1016,6 @@
     "\n",
     "http://www.centrofersrl.com/wp-content/uploads/2016/11/GRN.jpg"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
