Ultimos detalles de la ejecucion

--- a/conferences/pyconar2019/widgets-presentation.ipynb
+++ b/conferences/pyconar2019/widgets-presentation.ipynb
@@ -202,13 +202,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Cosito object at 0x7fc2b159ff10>\n"
+     ]
+    }
+   ],
    "source": [
     "class Cosito:\n",
     "    \n",
@@ -280,13 +288,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esto es str: ruflete\n",
+      "Esto es repr: Cosito(\"ruflete\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<i class=\"fa fa-hand-spock-o\" style=\"font-size:48px;color:red\">ruflete</i>"
+      ],
+      "text/plain": [
+       "Cosito(\"ruflete\")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Cosito:\n",
     "    \n",
@@ -312,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -326,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -359,13 +389,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esto es str: ruflete\n",
+      "Esto es repr: Cosito(\"ruflete\")\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb8fa4f9b73a48c4a7ad5ea185543b69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<i class=\"fa fa-hand-spock-o\" style=\"font-size:48px;color:red\">ruflete</i>'), Image…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ruflete = Cosito('ruflete')    \n",
     "print('Esto es str:', ruflete)\n",
@@ -386,13 +439,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cosito()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from traitlets import Unicode, Int\n",
     "from ipywidgets import Widget\n",
@@ -761,6 +824,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Reloj(DomWidget):\n",
+    "    value = Date(None, allow_none=True).tag(sync=True, **date_serialization)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -901,7 +978,7 @@
    "source": [
     "from traitlets import HasTraits, Float, observe, Unicode\n",
     "\n",
-    "class CositoModel(HasTraits):\n",
+    "class CositoModelo(HasTraits):\n",
     "    \n",
     "    tamanio  = Float()\n",
     "    nombre   = Unicode()\n",
@@ -962,7 +1039,7 @@
     }
    },
    "source": [
-    "![redes](imagenes/voten_los_politicos_todo_es_fake.jpg)"
+    "# @sashaKile"
    ]
   },
   {
@@ -973,7 +1050,7 @@
     }
    },
    "source": [
-    "# @sashaKile"
+    "![redes](imagenes/voten_los_politicos_todo_es_fake.jpg)"
    ]
   },
   {
